spring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot
